# irc-client

./: CMakeLists.txt
src/: CMakeLists.txt  client.cpp  client.hpp  event.hpp  main.cpp  parser.cpp  parser.hpp  utils.cpp  utils.hpp
src/event/: event.hpp
src/parser/: parser.cpp  parser.hpp
